# xvigra

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_convolution.cpp  benchmark_fundamentals.cpp  benchmark_tiny_vector.cpp  benchmark_views.cpp  main.cpp
include/xvigra/: array_nd.hpp  concepts.hpp  distance_transform.hpp  error.hpp  functor_base.hpp  gaussian.hpp  global.hpp  image_io.hpp  kernel.hpp  math.hpp  morphology.hpp  padding.hpp  separable_convolution.hpp  slice.hpp  slicer.hpp  splines.hpp  tiny_vector.hpp  version.hpp
test/: CMakeLists.txt  main.cpp  test_array_nd.cpp  test_concepts.cpp  test_distance_transform.cpp  test_distance_transform_data.hpp  test_error.cpp  test_gaussian.cpp  test_global.cpp  test_math.cpp  test_morphology.cpp  test_padding.cpp  test_separable_convolution.cpp  test_slice.cpp  test_slicer.cpp  test_splines.cpp  test_tiny_vector.cpp  unittest.hpp
